<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Just Java</string>
    <string name="order">ORDER</string>
    <string name="_0">0</string>
    <string name="quantity">Quantity </string>
    <string name="order_summary_quantity">Quantity: </string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order_summary_price">Price: </string>
    <string name="price_0">$0</string>
    <string name="two">2</string>
    <string name="price_10">$10</string>
    <string name="order_summary">Order Summary</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_summary_name">Name: </string>
    <string name="name">Name </string>
    <string name="order_summary_chocolate">Add Chocolate?</string>
    <string name="toppings">Toppings</string>
    <string name="order_summary_whipped_cream"> Add Whipped Cream? </string>
    <string name="thank_you">Thank you!</string>



</resources>
